--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
       <div class="original-price">Rp 185.000</div>
       <div class="price-note">1x bayar seumur hidup</div>
       <div class="price-explanation">
-        Rp 99.000 yang dibayarkan adalah biaya server dan maintenance. AMLO tidak mengambil keuntungan yang berarti dari biaya ini, karena harus membayarkan server dan maintenance jutaan rupiah setiap bulannya untuk menjaga aplikasi tetap berjalan dengan lancar.
+        Dikarenakan jumlah User yang bertambah, harga dinaikkan menjadi Rp 99.000 untuk biaya server dan maintenance. AMLO tidak mengambil keuntungan yang berarti dari biaya ini, karena harus membayarkan server dan maintenance jutaan rupiah setiap bulannya untuk menjaga aplikasi tetap berjalan dengan lancar.
       </div>
     </section>
 
