--- a/index.html
+++ b/index.html
@@ -281,7 +281,9 @@
       <div class="original-price">Rp 185.000</div>
       <div class="price-note">1x bayar seumur hidup</div>
       <div class="price-explanation">
-        Dikarenakan jumlah User yang bertambah, harga dinaikkan menjadi Rp 99.000 untuk biaya server dan maintenance. AMLO tidak mengambil keuntungan yang berarti dari biaya ini, karena harus membayarkan server dan maintenance jutaan rupiah setiap bulannya untuk menjaga aplikasi tetap berjalan dengan lancar.
+        Dikarenakan jumlah pengguna AMLO yang sudah sangat banyak, kami berencana membatasi pembelian untuk pengguna baru dalam waktu dekat. Langkah ini diambil agar server tetap stabil dan semua pengguna bisa menikmati performa terbaik. 
+Bagi yang belum memiliki akses, segera amankan aplikasi Anda sekarang sebelum pendaftaran untuk pengguna baru ditutup.
+Harga saat ini adalah Rp 99.000 (biaya server & maintenance), tanpa keuntungan berarti bagi AMLO — seluruhnya digunakan untuk menjaga aplikasi tetap berjalan lancar.
       </div>
     </section>
 
