--- a/index.html
+++ b/index.html
@@ -276,14 +276,14 @@
 
     <!-- Price Section -->
     <section class="price-section">
-      <div class="price-label">Harga Diskon</div>
+      <div class="price-label">Harga</div>
       <div class="price">Rp 99.000</div>
       <div class="original-price">Rp 185.000</div>
-      <div class="price-note">1x bayar seumur hidup</div>
+      <div class="price-note">One Time Payment (1x bayar seumur hidup)</div>
       <div class="price-explanation">
         Dikarenakan jumlah pengguna AMLO yang sudah sangat banyak, kami berencana membatasi pembelian untuk pengguna baru dalam waktu dekat. Langkah ini diambil agar server tetap stabil dan semua pengguna bisa menikmati performa terbaik. 
 Bagi yang belum memiliki akses, segera amankan aplikasi Anda sekarang sebelum pendaftaran untuk pengguna baru ditutup.
-Harga saat ini adalah Rp 99.000 (biaya server & maintenance), tanpa keuntungan berarti bagi AMLO — seluruhnya digunakan untuk menjaga aplikasi tetap berjalan lancar.
+Harga saat ini adalah Rp 99.000 (biaya server & maintenance), digunakan untuk menjaga aplikasi tetap berjalan lancar.
       </div>
     </section>
 
