--- a/index.html
+++ b/index.html
@@ -175,11 +175,102 @@
 
     .pose-image {
       width: 100%;
-      height: 80px;
-      object-fit: cover;
+      height: 0;
+      padding-bottom: 100%; /* Creates 1:1 aspect ratio */
+      position: relative;
       border-radius: 6px;
       margin-bottom: 8px;
       border: 1px solid rgba(255, 255, 255, 0.1);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+
+    .pose-image:hover {
+      transform: scale(1.05);
+      border-color: rgba(255, 255, 255, 0.3);
+    }
+
+    /* Image Viewer Modal */
+    .image-viewer {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      backdrop-filter: blur(5px);
+    }
+
+    .image-viewer.active {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .viewer-content {
+      position: relative;
+      max-width: 90%;
+      max-height: 90%;
+      background: rgba(255, 255, 255, 0.1);
+      border-radius: 12px;
+      padding: 20px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+    }
+
+    .viewer-image {
+      width: 100%;
+      height: auto;
+      max-height: 70vh;
+      object-fit: contain;
+      border-radius: 8px;
+    }
+
+    .viewer-info {
+      text-align: center;
+      margin-top: 15px;
+    }
+
+    .viewer-category {
+      font-size: 1rem;
+      color: #FFD700;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin-bottom: 5px;
+    }
+
+    .viewer-description {
+      font-size: 0.9rem;
+      color: #ccc;
+      font-weight: 400;
+    }
+
+    .close-viewer {
+      position: absolute;
+      top: 10px;
+      right: 15px;
+      color: #fff;
+      font-size: 2rem;
+      font-weight: bold;
+      cursor: pointer;
+      background: rgba(0, 0, 0, 0.5);
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: all 0.3s ease;
+    }
+
+    .close-viewer:hover {
+      background: rgba(255, 255, 255, 0.2);
+      transform: scale(1.1);
     }
 
     .pose-description {
@@ -426,42 +517,48 @@
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Portrait</div>
-            <img src="image-1.jpg" alt="Portrait Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-1.jpg');" title="Portrait Pose" 
+                 onclick="openImageViewer('image-1.jpg', 'Portrait', 'Pose Natural & Ekspresif')"></div>
             <div class="pose-description">Pose Natural & Ekspresif</div>
           </div>
         </div>
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Couple</div>
-            <img src="image-2.jpg" alt="Couple Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-2.jpg');" title="Couple Pose"
+                 onclick="openImageViewer('image-2.jpg', 'Couple', 'Romantic & Intimate')"></div>
             <div class="pose-description">Romantic & Intimate</div>
           </div>
         </div>
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Group</div>
-            <img src="image-3.jpg" alt="Group Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-3.jpg');" title="Group Pose"
+                 onclick="openImageViewer('image-3.jpg', 'Group', 'Dynamic & Fun')"></div>
             <div class="pose-description">Dynamic & Fun</div>
           </div>
         </div>
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Fashion</div>
-            <img src="image-4.jpg" alt="Fashion Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-4.jpg');" title="Fashion Pose"
+                 onclick="openImageViewer('image-4.jpg', 'Fashion', 'Stylish & Trendy')"></div>
             <div class="pose-description">Stylish & Trendy</div>
           </div>
         </div>
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Wedding</div>
-            <img src="image-5.jpg" alt="Wedding Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-5.jpg');" title="Wedding Pose"
+                 onclick="openImageViewer('image-5.jpg', 'Wedding', 'Elegant & Timeless')"></div>
             <div class="pose-description">Elegant & Timeless</div>
           </div>
         </div>
         <div class="gallery-item">
           <div class="pose-preview">
             <div class="pose-category">Creative</div>
-            <img src="image-6.jpg" alt="Creative Pose" class="pose-image">
+            <div class="pose-image" style="background-image: url('image-6.jpg');" title="Creative Pose"
+                 onclick="openImageViewer('image-6.jpg', 'Creative', 'Artistic & Unique')"></div>
             <div class="pose-description">Artistic & Unique</div>
           </div>
         </div>
@@ -517,6 +614,48 @@
       <p class="footer-text">© 2024 AMLO</p>
       <p class="footer-text">Visit us at <span class="domain">amlo.site</span></p>
     </footer>
+
+    <!-- Image Viewer Modal -->
+    <div id="imageViewer" class="image-viewer" onclick="closeImageViewer()">
+      <div class="viewer-content" onclick="event.stopPropagation()">
+        <span class="close-viewer" onclick="closeImageViewer()">&times;</span>
+        <img id="viewerImage" class="viewer-image" src="" alt="">
+        <div class="viewer-info">
+          <div id="viewerCategory" class="viewer-category"></div>
+          <div id="viewerDescription" class="viewer-description"></div>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <script>
+    function openImageViewer(imageSrc, category, description) {
+      const viewer = document.getElementById('imageViewer');
+      const viewerImage = document.getElementById('viewerImage');
+      const viewerCategory = document.getElementById('viewerCategory');
+      const viewerDescription = document.getElementById('viewerDescription');
+      
+      viewerImage.src = imageSrc;
+      viewerImage.alt = category + ' Pose';
+      viewerCategory.textContent = category;
+      viewerDescription.textContent = description;
+      
+      viewer.classList.add('active');
+      document.body.style.overflow = 'hidden'; // Prevent background scrolling
+    }
+
+    function closeImageViewer() {
+      const viewer = document.getElementById('imageViewer');
+      viewer.classList.remove('active');
+      document.body.style.overflow = 'auto'; // Restore scrolling
+    }
+
+    // Close viewer with Escape key
+    document.addEventListener('keydown', function(event) {
+      if (event.key === 'Escape') {
+        closeImageViewer();
+      }
+    });
+  </script>
 </body>
 </html>
