--- a/index.html
+++ b/index.html
@@ -41,30 +41,42 @@
       left: 0;
       width: 100%;
       height: 100%;
-      z-index: -1;
+      z-index: -2;
       pointer-events: none;
     }
 
     body::before {
       background: linear-gradient(90deg, transparent 0%, rgba(255, 255, 255, 0.08) 50%, transparent 100%);
-      background-size: 200% 100%;
-      animation: slideLine 10s linear infinite;
     }
 
     body::after {
       background: linear-gradient(180deg, transparent 0%, rgba(255, 255, 255, 0.04) 50%, transparent 100%);
-      background-size: 100% 200%;
-      animation: slideLine2 15s linear infinite;
     }
 
-    @keyframes slideLine {
-      0% { background-position: -200% 0; }
-      100% { background-position: 200% 0; }
+    /* Add blurred color background - Optimized for performance */
+    .container::before, .container::after {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+      pointer-events: none;
     }
 
-    @keyframes slideLine2 {
-      0% { background-position: 0 -200%; }
-      100% { background-position: 0 200%; }
+    .container::before {
+      background: 
+        radial-gradient(circle at 20% 20%, rgba(255, 0, 150, 0.08) 0%, transparent 40%),
+        radial-gradient(circle at 80% 80%, rgba(0, 150, 255, 0.08) 0%, transparent 40%);
+      filter: blur(40px);
+    }
+
+    .container::after {
+      background: 
+        radial-gradient(circle at 60% 10%, rgba(150, 0, 255, 0.06) 0%, transparent 35%),
+        radial-gradient(circle at 10% 70%, rgba(255, 100, 0, 0.06) 0%, transparent 35%);
+      filter: blur(50px);
     }
 
     .container {
