--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
             <span class="time-label">DETIK</span>
           </div>
         </div>
-        <div class="countdown-warning">Setelah pukul 12:00 WIB, penjualan akan ditutup!</div>
+        <div class="countdown-warning">Setelah pukul 12:00 WIB, penjualan akan ditutup hingga waktu yang tidak ditentukan!</div>
       </div>
 
       <!-- Order Buttons (Active before countdown ends) -->
