--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>AMLO - Photography Pose Guide</title>
-  <meta name="description" content="Jangan Jadi Fotografer Buta Pose Lagi Abangku! 11,000+ inspirasi pose profesional. 13 categories. Rp 79.000 - Akses seumur hidup.">
+  <meta name="description" content="Jangan Jadi Fotografer Buta Pose Lagi Abangku! 11,000+ inspirasi pose profesional. 13 categories. Rp 99.000 - Akses seumur hidup.">
 
   <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='20' y='20' width='60' height='60' fill='white' stroke='white' stroke-width='2' rx='8'/><circle cx='50' cy='50' r='15' fill='black'/><circle cx='50' cy='50' r='8' fill='white'/></svg>">
   <link rel="shortcut icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='20' y='20' width='60' height='60' fill='white' stroke='white' stroke-width='2' rx='8'/><circle cx='50' cy='50' r='15' fill='black'/><circle cx='50' cy='50' r='8' fill='white'/></svg>">
@@ -816,7 +816,7 @@
             <span class="time-label">DETIK</span>
           </div>
         </div>
-        <div class="countdown-warning">Setelah pukul 12:00 WIB, penjualan akan ditutup hingga waktu yang tidak ditentukan!</div>
+        <div class="countdown-warning">Pendaftaran dan Penjualan telah ditutup dikarenakan Server sudah Over Limit melebihi biaya maintanance.</div>
       </div>
 
       <!-- Order Buttons (Active before countdown ends) -->
@@ -831,7 +831,7 @@
       <!-- Pre-Order Form (Hidden, shows after countdown ends) -->
       <div class="preorder-section" id="preorderSection" style="display: none;">
         <h3 class="preorder-title">📝 PENJUALAN DITUTUP - DAFTAR PRE-ORDER</h3>
-        <p class="preorder-subtitle">Daftarkan email & WhatsApp Anda untuk mendapat notifikasi saat penjualan dibuka kembali</p>
+        <p class="preorder-subtitle">Daftarkan email & WhatsApp Anda untuk mendapat notifikasi saat penjualan dibuka kembali (Pre-Order Rp 99.000)</p>
         
         <form class="preorder-form" action="https://formspree.io/f/mzzvwjjo" method="POST">
           <div class="form-group">
@@ -886,13 +886,13 @@
     <!-- Price Section -->
     <section class="price-section">
       <div class="price-label">Harga</div>
-      <div class="price">Rp 79.000</div>
+      <div class="price">Rp 99.000</div>
       <div class="original-price">Rp 185.000</div>
       <div class="price-note">One Time Payment (1x bayar seumur hidup)</div>
       <div class="price-explanation">
         Dikarenakan jumlah pengguna AMLO yang sudah sangat banyak, kami berencana membatasi pembelian untuk pengguna baru dalam waktu dekat. Langkah ini diambil agar server tetap stabil dan semua pengguna bisa menikmati performa terbaik.
         <br><br>
-        Investasi satu kali sebesar Rp 79.000 ini memastikan Anda mendapatkan akses seumur hidup ke database yang terus kami perbarui, server berkecepatan tinggi, dan maintenance tanpa biaya tambahan.
+        Investasi satu kali sebesar Rp 99.000 ini memastikan Anda mendapatkan akses seumur hidup ke database yang terus kami perbarui, server berkecepatan tinggi, dan maintenance tanpa biaya tambahan.
         <br><br>
         Bagi yang belum memiliki akses, segera amankan aplikasi Anda sekarang sebelum pendaftaran untuk pengguna baru ditutup.
       </div>
