--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>AMLO - Photography Pose Guide</title>
-  <meta name="description" content="Jangan Jadi Fotografer Buta Pose Lagi Abangku! 11,000+ inspirasi pose profesional. 13 categories. Rp 99.000 - Akses seumur hidup.">
+  <meta name="description" content="Amlo App Aplikasi Contekan Pose Fotografi 11,000+ inspirasi pose profesional. 13 categories. Rp 185.000 - Akses seumur hidup.">
 
   <link rel="icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='20' y='20' width='60' height='60' fill='white' stroke='white' stroke-width='2' rx='8'/><circle cx='50' cy='50' r='15' fill='black'/><circle cx='50' cy='50' r='8' fill='white'/></svg>">
   <link rel="shortcut icon" type="image/x-icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect x='20' y='20' width='60' height='60' fill='white' stroke='white' stroke-width='2' rx='8'/><circle cx='50' cy='50' r='15' fill='black'/><circle cx='50' cy='50' r='8' fill='white'/></svg>">
@@ -925,12 +925,12 @@
     <!-- Header -->
     <header class="header">
       <h1 class="app-name">AMLO</h1>
-      <p class="tagline">Aplikasi FG Anti Buta Pose</p>
+      <p class="tagline">Aplikasi Pose Fotografi</p>
     </header>
 
     <!-- Hero Section -->
     <section class="hero">
-      <h2 class="hero-title">Jangan Jadi Fotografer Buta Pose Lagi Abangku!</h2>
+      <h2 class="hero-title">Aplikasi Pose Fotografi</h2>
       <p class="hero-subtitle">Dengan 11.000+ inspirasi pose + Fitur Share ke Client</p>
     </section>
 
